--- a/po/zh_Hans.po
+++ b/po/zh_Hans.po
@@ -10,8 +10,8 @@ msgstr ""
 "PO-Revision-Date: 2025-06-09 19:58+0000\n"
 "Last-Translator: Outbreak2096 <outbreak2096@noreply.codeberg.org>\n"
 "Language-Team: Chinese (Simplified Han script) <https://"
-"translate.codeberg.org/projects/de-swsnr-pictureoftheday/"
-"de-swsnr-pictureoftheday/zh_Hans/>\n"
+"translate.codeberg.org/projects/de-swsnr-pictureoftheday/de-swsnr-"
+"pictureoftheday/zh_Hans/>\n"
 "Language: zh_Hans\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -413,7 +413,7 @@ msgstr "获取 API 密钥"
 msgid "Enabled collections"
 msgstr "启用的集合"
 
-#: src/app.rs:126
+#: src/app.rs:128
 msgctxt "about-dialog.link.label"
 msgid "Translations"
 msgstr "翻译"
@@ -421,48 +421,48 @@ msgstr "翻译"
 #. Credits for the translator to the current language.
 #. Translators: Add your name here, as "Jane Doe <jdoe@example.com>" or "Jane Doe https://jdoe.example.com"
 #. Mail address or URL are optional.  Separate multiple translators with a newline, i.e. \n
-#: src/app.rs:135
+#: src/app.rs:137
 msgid "translator-credits"
 msgstr "Outbreak2096"
 
-#: src/app.rs:140
+#: src/app.rs:142
 msgctxt "about-dialog.acknowledgment-section"
 msgid "Help and inspiration"
 msgstr "帮助和灵感"
 
-#: src/app.rs:153
+#: src/app.rs:155
 msgctxt "about-dialog.acknowledgment-section"
 msgid "Helpful services"
 msgstr "辅助服务"
 
 #. Translators: Use translated app name from https://flathub.org/apps/de.swsnr.turnon
-#: src/app.rs:165
+#: src/app.rs:167
 msgctxt "about-dialog.other-app.name"
 msgid "Turn On"
 msgstr "Turn On"
 
 #. Translators: Use translated app summary from https://flathub.org/apps/de.swsnr.turnon
-#: src/app.rs:170
+#: src/app.rs:172
 msgctxt "about-dialog.other-app.summary"
 msgid "Turn on devices in your network"
 msgstr "打开网络中的设备"
 
-#: src/app.rs:188
+#: src/app.rs:190
 msgctxt "notification.title"
 msgid "Picture Of The Day updated"
 msgstr "今日图片已更新"
 
-#: src/app.rs:193
+#: src/app.rs:195
 msgctxt "notification.body"
 msgid "Please restart the app to use the new version."
 msgstr "请重启应用以使用新版本。"
 
-#: src/app.rs:205
+#: src/app.rs:207
 msgctxt "alert-dialog.title"
 msgid "Restart after update?"
 msgstr "更新后重启？"
 
-#: src/app.rs:210
+#: src/app.rs:212
 msgctxt "alert-dialog.body"
 msgid ""
 "Picture Of The Day was updated, and needs to be restarted.\n"
@@ -474,251 +474,332 @@ msgstr ""
 "\n"
 "尚不支持自动重启，但您可以退出应用并手动重启。"
 
-#: src/app.rs:219
+#: src/app.rs:221
 msgctxt "alert-dialog.response"
 msgid "Cancel"
 msgstr "取消"
 
-#: src/app.rs:221
+#: src/app.rs:223
 msgctxt "alert-dialog.response"
 msgid "Quit"
 msgstr "退出"
 
-#: src/app.rs:287
+#: src/app.rs:289
 msgctxt "notification.button.label"
 msgid "Contact information"
 msgstr "联系信息"
 
-#: src/app.rs:292
+#: src/app.rs:294
 msgctxt "notification.button.label"
 msgid "Open preferences"
 msgstr "打开首选项"
 
-#: src/app.rs:296
+#: src/app.rs:298
 msgctxt "notification.button.label"
 msgid "Open URL"
 msgstr "打开 URL"
 
-#: src/app.rs:585
+#: src/app.rs:592
 msgctxt "command-line.option.description"
 msgid "Open preferences"
 msgstr "打开首选项"
 
-#: src/app.rs:596
+#: src/app.rs:603
 msgctxt "command-line.option.description"
 msgid "Show image for the given date"
 msgstr "显示给定日期的图片"
 
-#: src/app.rs:601
+#: src/app.rs:608
 msgctxt "command-line.option.arg.description"
 msgid "YYYY-MM-DD"
 msgstr "YYYY-MM-DD"
 
-#: src/app.rs:806
+#: src/app.rs:802
 msgctxt "portal.request-background.reason"
 msgid "Automatically fetch and set wallpaper in background"
 msgstr "在后台自动获取并设置壁纸"
 
-#: src/app/model/error_notification.rs:41
+#: src/app/model/error_notification.rs:42
 msgctxt "error-notification.title"
 msgid "Picture Of The Day needs an API key"
 msgstr "需要 API 密钥"
 
-#: src/app/model/error_notification.rs:46
+#: src/app/model/error_notification.rs:48
+#, fuzzy
+#| msgctxt "error-notification.description"
+#| msgid ""
+#| "Please configure a valid API key for %1 in the application preferences. "
+#| "The current key appears to be invalid."
 msgctxt "error-notification.description"
 msgid ""
-"Please configure a valid API key for %1 in the application preferences. The "
-"current key appears to be invalid."
+"Please configure a valid API key for {source_name} in the application "
+"preferences. The current key appears to be invalid."
 msgstr "请在应用程序首选项中为 %1 配置有效的 API 密钥。当前密钥似乎无效。"
 
-#: src/app/model/error_notification.rs:60
+#: src/app/model/error_notification.rs:66
 msgctxt "error-notification.title"
 msgid "Picture Of The Day was rate-limited"
 msgstr "速率限制"
 
-#: src/app/model/error_notification.rs:65
+#: src/app/model/error_notification.rs:72
+#, fuzzy
+#| msgctxt "error-notification.description"
+#| msgid ""
+#| "The %1 server is rate-limited and does currently not allow you to fetch "
+#| "an image. Try again later, or try a different source."
 msgctxt "error-notification.description"
 msgid ""
-"The %1 server is rate-limited and does currently not allow you to fetch an "
-"image. Try again later, or try a different source."
+"The {source_name} server is rate-limited and does currently not allow you to "
+"fetch an image. Try again later, or try a different source."
 msgstr ""
 "%1 服务器有速率限制，目前不允许您获取图片。请稍后重试，或尝试其他来源。"
 
-#: src/app/model/error_notification.rs:74
-#: src/app/model/error_notification.rs:87
+#: src/app/model/error_notification.rs:85
+#: src/app/model/error_notification.rs:103
 msgctxt "error-notification.title"
 msgid "No image today"
 msgstr "今天没有图片"
 
-#: src/app/model/error_notification.rs:78
+#: src/app/model/error_notification.rs:90
+#, fuzzy
+#| msgctxt "error-notification.description"
+#| msgid ""
+#| "Currently, %1 does not provide an image for today. Try again later, or "
+#| "try a different source."
 msgctxt "error-notification.description"
 msgid ""
-"Currently, %1 does not provide an image for today. Try again later, or try a "
-"different source."
+"Currently, {source_name} does not provide an image for today. Try again "
+"later, or try a different source."
 msgstr "目前，%1 没有提供今天的图片。请稍后重试，或尝试其他来源。"
 
-#: src/app/model/error_notification.rs:91
+#: src/app/model/error_notification.rs:108
+#, fuzzy
+#| msgctxt "error-notification.description"
+#| msgid ""
+#| "Today, %1 provides a video or another type of media which this "
+#| "application does not support. Try again tomorrow, or try a different "
+#| "source."
 msgctxt "error-notification.description"
 msgid ""
-"Today, %1 provides a video or another type of media which this application "
-"does not support. Try again tomorrow, or try a different source."
+"Today, {source_name} provides a video or another type of media which this "
+"application does not support. Try again tomorrow, or try a different source."
 msgstr ""
 "今天，%1 提供了本应用程序不支持的视频或其他类型的媒体。请明天重试，或尝试其他"
 "来源。"
 
-#: src/app/model/error_notification.rs:103
-#: src/app/model/error_notification.rs:121
-#: src/app/model/error_notification.rs:149
+#: src/app/model/error_notification.rs:125
+#: src/app/model/error_notification.rs:146
+#: src/app/model/error_notification.rs:188
 msgctxt "error-notification.title"
 msgid "Fetching images failed"
 msgstr "获取图片失败"
 
-#: src/app/model/error_notification.rs:107
+#: src/app/model/error_notification.rs:130
+#, fuzzy
+#| msgctxt "error-notification.description"
+#| msgid ""
+#| "The %s server replied with HTTP status %2. The server may have issues "
+#| "currently. Try again later, or try a different source. If the issue "
+#| "persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
-"The %s server replied with HTTP status %2. The server may have issues "
-"currently. Try again later, or try a different source. If the issue persists "
-"please report the problem."
+"The {source_name} server replied with HTTP status {http_status}. The server "
+"may have issues currently. Try again later, or try a different source. If "
+"the issue persists please report the problem."
 msgstr ""
 "%s 服务器回复了 HTTP 状态 %2。服务器当前可能有问题。请稍后重试，或尝试其他来"
 "源。如果问题仍然存在，请报告问题。"
 
-#: src/app/model/error_notification.rs:125
+#: src/app/model/error_notification.rs:151
+#, fuzzy
+#| msgctxt "error-notification.description"
+#| msgid ""
+#| "The %1 server responded with invalid data. The server may have issues "
+#| "currently. Try again later, or try a different source. If the issue "
+#| "persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
-"The %1 server responded with invalid data. The server may have issues "
-"currently. Try again later, or try a different source. If the issue persists "
-"please report the problem."
+"The {source_name} server responded with invalid data. The server may have "
+"issues currently. Try again later, or try a different source. If the issue "
+"persists please report the problem."
 msgstr ""
 "%1 服务器响应了无效数据。服务器当前可能有问题。请稍后重试，或尝试其他来源。如"
 "果问题仍然存在，请报告问题。"
 
-#: src/app/model/error_notification.rs:140
+#: src/app/model/error_notification.rs:171
 msgctxt "error-notification.title"
 msgid "Limited network connectivity"
 msgstr "网络连接受限"
 
-#: src/app/model/error_notification.rs:145
+#: src/app/model/error_notification.rs:177
+#, fuzzy
+#| msgctxt "error-notification.description"
+#| msgid ""
+#| "An I/O error occurred while fetching today's image from %1, with the "
+#| "following message: %2. Your system appears to have only limited network "
+#| "connectivity. Try to connect your system to the internet."
 msgctxt "error-notification.description"
 msgid ""
-"An I/O error occurred while fetching today's image from %1, with the "
-"following message: %2. Your system appears to have only limited network "
-"connectivity. Try to connect your system to the internet."
+"An I/O error occurred while fetching today's image from {source_name}, with "
+"the following message: {error}. Your system appears to have only limited "
+"network connectivity. Try to connect your system to the internet."
 msgstr ""
 "从 %1 获取今天的图片时发生 I/O 错误，消息如下：%2。您的系统网络连接似乎受限。"
 "请尝试将您的系统连接到互联网。"
 
-#: src/app/model/error_notification.rs:153
+#: src/app/model/error_notification.rs:193
+#, fuzzy
+#| msgctxt "error-notification.description"
+#| msgid ""
+#| "An I/O error occurred while fetching today's image from %1, with the "
+#| "following message: %2. Try again later, or try a different source. If the "
+#| "issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
-"An I/O error occurred while fetching today's image from %1, with the "
-"following message: %2. Try again later, or try a different source. If the "
-"issue persists please report the problem."
+"An I/O error occurred while fetching today's image from {source_name}, with "
+"the following message: {error}. Try again later, or try a different source. "
+"If the issue persists please report the problem."
 msgstr ""
 "从 %1 获取今天的图片时发生 I/O 错误，消息如下：%2。请稍后重试，或尝试其他来"
 "源。如果问题仍然存在，请报告问题。"
 
-#: src/app/widgets/application_window.rs:73
-msgctxt "error-notification.description"
-msgid ""
-"An I/O error occurred while opening %1, with the following message: %2. If "
-"the issue persists please report the problem."
-msgstr "打开 %1 时发生 I/O 错误，消息如下：%2。如果问题仍然存在，请报告问题。"
-
-#: src/app/widgets/application_window.rs:79
+#: src/app/widgets/application_window.rs:74
 msgctxt "error-notification.title"
 msgid "Failed to open source URL"
 msgstr "无法打开源 URL"
 
-#: src/app/widgets/application_window.rs:98
+#: src/app/widgets/application_window.rs:81
+#, fuzzy
+#| msgctxt "error-notification.description"
+#| msgid ""
+#| "An I/O error occurred while opening %1, with the following message: %2. "
+#| "If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
-"An I/O error occurred while setting the wallpaper, with the following "
-"message: %1. If the issue persists please report the problem."
-msgstr "设置壁纸时发生 I/O 错误，消息如下：%1。如果问题仍然存在，请报告问题。"
+"An I/O error occurred while opening {url}, with the following message: "
+"{error}. If the issue persists please report the problem."
+msgstr "打开 %1 时发生 I/O 错误，消息如下：%2。如果问题仍然存在，请报告问题。"
 
-#: src/app/widgets/application_window.rs:104
+#: src/app/widgets/application_window.rs:103
 msgctxt "error-notification.title"
 msgid "Failed to set wallpaper"
 msgstr "无法设置壁纸"
 
-#: src/app/widgets/application_window.rs:131
+#: src/app/widgets/application_window.rs:110
+#, fuzzy
+#| msgctxt "error-notification.description"
+#| msgid ""
+#| "An I/O error occurred while setting the wallpaper, with the following "
+#| "message: %1. If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
-"An I/O error occurred while opening the current image, with the following "
-"message: %1. If the issue persists please report the problem."
-msgstr ""
-"打开当前图片时发生 I/O 错误，消息如下：%1。如果问题仍然存在，请报告问题。"
+"An I/O error occurred while setting the wallpaper, with the following "
+"message: {error}. If the issue persists please report the problem."
+msgstr "设置壁纸时发生 I/O 错误，消息如下：%1。如果问题仍然存在，请报告问题。"
 
-#: src/app/widgets/application_window.rs:137
+#: src/app/widgets/application_window.rs:143
 msgctxt "error-notification.title"
 msgid "Failed to open image"
 msgstr "无法打开图片"
 
-#: src/app/widgets/application_window.rs:152
-msgid "Saved image %1"
-msgstr "已保存图片 %1"
-
-#: src/app/widgets/application_window.rs:170
+#: src/app/widgets/application_window.rs:150
+#, fuzzy
+#| msgctxt "error-notification.description"
+#| msgid ""
+#| "An I/O error occurred while opening the current image, with the following "
+#| "message: %1. If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
-"An I/O error occurred while saving the current image, with the following "
-"message: %1. If the issue persists please report the problem."
+"An I/O error occurred while opening the current image, with the following "
+"message: {error}. If the issue persists please report the problem."
 msgstr ""
-"保存当前图片时发生 I/O 错误，消息如下：%1。如果问题仍然存在，请报告问题。"
+"打开当前图片时发生 I/O 错误，消息如下：%1。如果问题仍然存在，请报告问题。"
 
-#: src/app/widgets/application_window.rs:176
+#: src/app/widgets/application_window.rs:170
+#, fuzzy
+#| msgid "Saved image %1"
+msgid "Saved image {name}"
+msgstr "已保存图片 %1"
+
+#: src/app/widgets/application_window.rs:189
 msgctxt "error-notification.title"
 msgid "Failed to save image"
 msgstr "无法保存图片"
 
-#: src/app/widgets/application_window.rs:193
+#: src/app/widgets/application_window.rs:196
+#, fuzzy
+#| msgctxt "error-notification.description"
+#| msgid ""
+#| "An I/O error occurred while saving the current image, with the following "
+#| "message: %1. If the issue persists please report the problem."
+msgctxt "error-notification.description"
+msgid ""
+"An I/O error occurred while saving the current image, with the following "
+"message: {error}. If the issue persists please report the problem."
+msgstr ""
+"保存当前图片时发生 I/O 错误，消息如下：%1。如果问题仍然存在，请报告问题。"
+
+#: src/app/widgets/application_window.rs:218
 msgctxt "alert.response"
 msgid "Close"
 msgstr "关闭"
 
-#: src/app/widgets/application_window.rs:200
+#: src/app/widgets/application_window.rs:225
 msgctxt "alert.response"
 msgid "Contact information"
 msgstr "联系信息"
 
-#: src/app/widgets/application_window.rs:204
+#: src/app/widgets/application_window.rs:229
 msgctxt "alert.response"
 msgid "Open preferences"
 msgstr "打开首选项"
 
-#: src/app/widgets/application_window.rs:208
+#: src/app/widgets/application_window.rs:233
 msgctxt "alert.response"
 msgid "Open URL"
 msgstr "打开 URL"
 
-#: src/app/widgets/application_window.rs:366
+#: src/app/widgets/application_window.rs:392
 msgctxt "toast.button.label"
 msgid "Details"
 msgstr "详情"
 
-#: src/app/widgets/application_window.rs:471
+#: src/app/widgets/application_window.rs:507
 msgctxt "file-dialog.title"
 msgid "Save image"
 msgstr "保存图片"
 
-#: src/app/widgets/preferences_dialog.rs:71
-msgid "%1/%2 collection enabled"
-msgid_plural "%1/%2 collections enabled"
+#: src/app/widgets/preferences_dialog.rs:73
+#, fuzzy
+#| msgid "%1/%2 collection enabled"
+#| msgid_plural "%1/%2 collections enabled"
+msgid "{n}/{total} collection enabled"
+msgid_plural "{n}/{total} collections enabled"
 msgstr[0] "%1/%2 集合已启用"
 
 #. Translators: This is Pango markup, be sure to escape appropriately
-#: src/config.rs:61
+#: src/config.rs:71
+#, fuzzy
+#| msgctxt "about-dialog.license-text"
+#| msgid ""
+#| "Copyright Sebastian Wiesner &lt;sebastian@swsnr.de&gt;\n"
+#| "\n"
+#| "Licensed under the terms of the EUPL 1.2. You can find official "
+#| "translations of the license text at <a href=\"%1\">%1</a>.\n"
+#| "\n"
+#| "The full English text follows.\n"
+#| "\n"
+#| "%2"
 msgctxt "about-dialog.license-text"
 msgid ""
-"Copyright Sebastian Wiesner &lt;sebastian@swsnr.de&gt;\n"
+"Copyright {copyright_name} &lt;{copyright_mail}&gt;\n"
 "\n"
 "Licensed under the terms of the EUPL 1.2. You can find official translations "
-"of the license text at <a href=\"%1\">%1</a>.\n"
+"of the license text at <a href=\"{translations}\">{translations}</a>.\n"
 "\n"
 "The full English text follows.\n"
 "\n"
-"%2"
+"{license_text}"
 msgstr ""
 "版权所有 Sebastian Wiesner &lt;sebastian@swsnr.de&gt;\n"
 "\n"
@@ -769,30 +850,36 @@ msgctxt "source.eoiod.copyright"
 msgid "NASA Earth Observatory"
 msgstr "NASA 地球观测站"
 
-#: src/images/sources/stalenhag.rs:94
+#: src/images/sources/stalenhag.rs:96
 msgctxt "source.stalenhag.copyright"
 msgid "All rights reserved."
 msgstr "版权所有。"
 
-#: src/images/sources/stalenhag.rs:95
-#, c-format
+#: src/images/sources/stalenhag.rs:98
+#, fuzzy
+#| msgctxt "source.stalenhag.description"
+#| msgid "Collection: %s"
 msgctxt "source.stalenhag.description"
-msgid "Collection: %s"
+msgid "Collection: {}"
 msgstr "集合：%s"
 
-#: src/images/sources/wikimedia.rs:65
-#, c-format
+#: src/images/sources/wikimedia.rs:67
+#, fuzzy
+#| msgctxt "source.wikimedia.copyright"
+#| msgid "%artist (%credit, %license)"
 msgctxt "source.wikimedia.copyright"
-msgid "%artist (%credit, %license)"
+msgid "{artist} ({credit}, {license})"
 msgstr "%artist (%credit, %license)"
 
-#: src/images/sources/wikimedia.rs:71
-#, c-format
+#: src/images/sources/wikimedia.rs:75
+#, fuzzy
+#| msgctxt "source.wikimedia.copyright"
+#| msgid "%artist (%license)"
 msgctxt "source.wikimedia.copyright"
-msgid "%artist (%license)"
+msgid "{artist} ({license})"
 msgstr "%artist (%license)"
 
-#: src/images/sources/wikimedia.rs:80
+#: src/images/sources/wikimedia.rs:85
 msgctxt "source.wikimedia.copyright"
 msgid "Unknown, all rights reserved"
 msgstr "未知，版权所有"
