--- a/po/de.po
+++ b/po/de.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de.swsnr.picture-of-the-day\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-06-09 19:58+0000\n"
+"PO-Revision-Date: 2025-07-23 08:09+0000\n"
 "Last-Translator: Sebastian Wiesner <sebastian@swsnr.de>\n"
-"Language-Team: German <https://translate.codeberg.org/projects/de-swsnr-"
-"pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
+"Language-Team: German <https://translate.codeberg.org/projects/"
+"de-swsnr-pictureoftheday/de-swsnr-pictureoftheday/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 5.11.4\n"
+"X-Generator: Weblate 5.12.2\n"
 
 #. Translators: Do feel free to translate the application name
 #: de.swsnr.pictureoftheday.desktop:3 de.swsnr.pictureoftheday.metainfo.xml:5
@@ -555,18 +555,13 @@ msgid "Picture Of The Day needs an API key"
 msgstr "Bild des Tages benötigt einen API-Schlüssel"
 
 #: src/app/model/error_notification.rs:48
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "Please configure a valid API key for %1 in the application preferences. "
-#| "The current key appears to be invalid."
 msgctxt "error-notification.description"
 msgid ""
 "Please configure a valid API key for {source_name} in the application "
 "preferences. The current key appears to be invalid."
 msgstr ""
-"Bitte konfiguriere einen gültigen API-Schlüssel für %1 in den Einstellungen "
-"der Anwendung."
+"Bitte konfiguriere einen gültigen API-Schlüssel für {source_name} in den "
+"Einstellungen der Anwendung."
 
 #: src/app/model/error_notification.rs:66
 msgctxt "error-notification.title"
@@ -574,18 +569,14 @@ msgid "Picture Of The Day was rate-limited"
 msgstr "Die Zugriffsrate von Bild des Tages wurde beschränkt"
 
 #: src/app/model/error_notification.rs:72
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "The %1 server is rate-limited and does currently not allow you to fetch "
-#| "an image. Try again later, or try a different source."
 msgctxt "error-notification.description"
 msgid ""
 "The {source_name} server is rate-limited and does currently not allow you to "
 "fetch an image. Try again later, or try a different source."
 msgstr ""
-"Der %1 Server beschränkt die Zugriffsrate und erlaubt Dir aktuell nicht, ein "
-"Bild abzurufen. Versuche es später erneut, oder wähle eine andere Quelle."
+"Der {source_name} Server beschränkt die Zugriffsrate und erlaubt Dir aktuell "
+"nicht, ein Bild abzurufen. Versuche es später erneut, oder wähle eine andere "
+"Quelle."
 
 #: src/app/model/error_notification.rs:85
 #: src/app/model/error_notification.rs:103
@@ -594,34 +585,23 @@ msgid "No image today"
 msgstr "Kein Bild heute"
 
 #: src/app/model/error_notification.rs:90
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "Currently, %1 does not provide an image for today. Try again later, or "
-#| "try a different source."
 msgctxt "error-notification.description"
 msgid ""
 "Currently, {source_name} does not provide an image for today. Try again "
 "later, or try a different source."
 msgstr ""
-"Aktuell stellt %1 kein Bild für heute zur Verfügung. Versuche es später "
-"erneut, oder wähle eine andere Quelle."
+"Aktuell stellt {source_name} kein Bild für heute zur Verfügung. Versuche es "
+"später erneut, oder wähle eine andere Quelle."
 
 #: src/app/model/error_notification.rs:108
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "Today, %1 provides a video or another type of media which this "
-#| "application does not support. Try again tomorrow, or try a different "
-#| "source."
 msgctxt "error-notification.description"
 msgid ""
 "Today, {source_name} provides a video or another type of media which this "
 "application does not support. Try again tomorrow, or try a different source."
 msgstr ""
-"Heute stellt %1 ein Video oder eine andere Art von Medium zur Verfügung, das "
-"diese Anwendung nicht unterstützt. Versuche es morgen erneut, oder wähle "
-"eine andere Quelle."
+"Heute stellt {source_name} ein Video oder eine andere Art von Medium zur "
+"Verfügung, das diese Anwendung nicht unterstützt. Versuche es morgen erneut, "
+"oder wähle eine andere Quelle."
 
 #: src/app/model/error_notification.rs:125
 #: src/app/model/error_notification.rs:146
@@ -631,38 +611,27 @@ msgid "Fetching images failed"
 msgstr "Abrufen der Bilder fehlgeschlagen"
 
 #: src/app/model/error_notification.rs:130
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "The %s server replied with HTTP status %2. The server may have issues "
-#| "currently. Try again later, or try a different source. If the issue "
-#| "persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "The {source_name} server replied with HTTP status {http_status}. The server "
 "may have issues currently. Try again later, or try a different source. If "
 "the issue persists please report the problem."
 msgstr ""
-"Der %1 Server hat mit dem HTTP Status %2 geantwortet. Eventuell hat der "
-"Server aktuell Probleme. Versuche es später erneut, oder wähle eine andere "
-"Quelle. Falls das Problem bestehen bleibt, melde das Problem bitte."
+"Der {source_name} Server hat mit dem HTTP Status {http_status} geantwortet. "
+"Eventuell hat der Server aktuell Probleme. Versuche es später erneut, oder "
+"wähle eine andere Quelle. Falls das Problem bestehen bleibt, melde das "
+"Problem bitte."
 
 #: src/app/model/error_notification.rs:151
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "The %1 server responded with invalid data. The server may have issues "
-#| "currently. Try again later, or try a different source. If the issue "
-#| "persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "The {source_name} server responded with invalid data. The server may have "
 "issues currently. Try again later, or try a different source. If the issue "
 "persists please report the problem."
 msgstr ""
-"Der %1 Server hat mit ungültige Daten geantwortet. Eventuell hat der Server "
-"aktuell Probleme. Versuche es später erneut, oder wähle eine andere Quelle. "
-"Falls das Problem bestehen bleibt, melde das Problem bitte."
+"Der {source_name} Server hat mit ungültige Daten geantwortet. Eventuell hat "
+"der Server aktuell Probleme. Versuche es später erneut, oder wähle eine "
+"andere Quelle. Falls das Problem bestehen bleibt, melde das Problem bitte."
 
 #: src/app/model/error_notification.rs:171
 msgctxt "error-notification.title"
@@ -670,39 +639,28 @@ msgid "Limited network connectivity"
 msgstr "Eingeschränkte Netzwerkverbindung"
 
 #: src/app/model/error_notification.rs:177
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while fetching today's image from %1, with the "
-#| "following message: %2. Your system appears to have only limited network "
-#| "connectivity. Try to connect your system to the internet."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while fetching today's image from {source_name}, with "
 "the following message: {error}. Your system appears to have only limited "
 "network connectivity. Try to connect your system to the internet."
 msgstr ""
-"Ein I/O Fehler ist aufgetreten beim Anruf des heutigen Bildes von %1, mit "
-"der folgenden Fehlermeldung: %2. Dein System scheint nur eingeschränkte "
-"Verbindung zum Netzwerk zu haben. Versuche, Dein System mit dem Internet zu "
-"verbinden."
+"Ein I/O Fehler ist aufgetreten beim Anruf des heutigen Bildes von "
+"{source_name}, mit der folgenden Fehlermeldung: {error}. Dein System scheint "
+"nur eingeschränkte Verbindung zum Netzwerk zu haben. Versuche, Dein System "
+"mit dem Internet zu verbinden."
 
 #: src/app/model/error_notification.rs:193
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while fetching today's image from %1, with the "
-#| "following message: %2. Try again later, or try a different source. If the "
-#| "issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while fetching today's image from {source_name}, with "
 "the following message: {error}. Try again later, or try a different source. "
 "If the issue persists please report the problem."
 msgstr ""
-"Ein I/O Fehler ist aufgetreten beim Abrufen des heutigen Bildes von %1, mit "
-"der folgenden Fehlermeldung: %2. Versuche es morgen erneut, oder wähle eine "
-"andere Quelle. Falls das Problem bestehen bleibt, melde das Problem bitte."
+"Ein I/O Fehler ist aufgetreten beim Abrufen des heutigen Bildes von "
+"{source_name}, mit der folgenden Fehlermeldung: {error}. Versuche es morgen "
+"erneut, oder wähle eine andere Quelle. Falls das Problem bestehen bleibt, "
+"melde das Problem bitte."
 
 #: src/app/widgets/application_window.rs:74
 msgctxt "error-notification.title"
@@ -710,18 +668,13 @@ msgid "Failed to open source URL"
 msgstr "Öffnen der URL der Quelle fehlgeschlagen"
 
 #: src/app/widgets/application_window.rs:81
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while opening %1, with the following message: %2. "
-#| "If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while opening {url}, with the following message: "
 "{error}. If the issue persists please report the problem."
 msgstr ""
-"Ein I/O Fehler ist aufgetreten beim Öffnen von %1, mit der folgenden "
-"Fehlermeldung: %2. Falls das Problem bestehen bleibt, melde das Problem "
+"Ein I/O Fehler ist aufgetreten beim Öffnen von {url}, mit der folgenden "
+"Fehlermeldung: {error}. Falls das Problem bestehen bleibt, melde das Problem "
 "bitte."
 
 #: src/app/widgets/application_window.rs:103
@@ -730,19 +683,14 @@ msgid "Failed to set wallpaper"
 msgstr "Setzen des Bildschirmhintergrunds fehlgeschlagen"
 
 #: src/app/widgets/application_window.rs:110
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while setting the wallpaper, with the following "
-#| "message: %1. If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while setting the wallpaper, with the following "
 "message: {error}. If the issue persists please report the problem."
 msgstr ""
 "Ein I/O Fehler ist aufgetreten beim Setzen des Bildschirmhintergrunds, mit "
-"der folgenden Fehlermeldung: %2. Falls das Problem bestehen bleibt, melde "
-"das Problem bitte."
+"der folgenden Fehlermeldung: {error}. Falls das Problem bestehen bleibt, "
+"melde das Problem bitte."
 
 #: src/app/widgets/application_window.rs:143
 msgctxt "error-notification.title"
@@ -750,25 +698,18 @@ msgid "Failed to open image"
 msgstr "Öffnen des Bildes fehlgeschlagen"
 
 #: src/app/widgets/application_window.rs:150
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while opening the current image, with the following "
-#| "message: %1. If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while opening the current image, with the following "
 "message: {error}. If the issue persists please report the problem."
 msgstr ""
 "Ein I/O Fehler ist aufgetreten beim Öffnen des aktuellen Bildes, mit der "
-"folgenden Fehlermeldung: %1. Falls das Problem bestehen bleibt, melde das "
-"Problem bitte."
+"folgenden Fehlermeldung: {error}. Falls das Problem bestehen bleibt, melde "
+"das Problem bitte."
 
 #: src/app/widgets/application_window.rs:170
-#, fuzzy
-#| msgid "Saved image %1"
 msgid "Saved image {name}"
-msgstr "Bild %1 gespeichert"
+msgstr "Bild {name} gespeichert"
 
 #: src/app/widgets/application_window.rs:189
 msgctxt "error-notification.title"
@@ -776,19 +717,14 @@ msgid "Failed to save image"
 msgstr "Speichern des Bildes fehlgeschlagen"
 
 #: src/app/widgets/application_window.rs:196
-#, fuzzy
-#| msgctxt "error-notification.description"
-#| msgid ""
-#| "An I/O error occurred while saving the current image, with the following "
-#| "message: %1. If the issue persists please report the problem."
 msgctxt "error-notification.description"
 msgid ""
 "An I/O error occurred while saving the current image, with the following "
 "message: {error}. If the issue persists please report the problem."
 msgstr ""
 "Ein I/O Fehler ist aufgetreten beim Speichern des aktuellen Bildes, mit der "
-"folgenden Fehlermeldung: %1. Falls das Problem bestehen bleibt, melde das "
-"Problem bitte."
+"folgenden Fehlermeldung: {error}. Falls das Problem bestehen bleibt, melde "
+"das Problem bitte."
 
 #: src/app/widgets/application_window.rs:218
 msgctxt "alert.response"
@@ -821,27 +757,13 @@ msgid "Save image"
 msgstr "Bild speichern"
 
 #: src/app/widgets/preferences_dialog.rs:73
-#, fuzzy
-#| msgid "%1/%2 collection enabled"
-#| msgid_plural "%1/%2 collections enabled"
 msgid "{n}/{total} collection enabled"
 msgid_plural "{n}/{total} collections enabled"
-msgstr[0] "%1/%2 Sammlung aktiviert"
-msgstr[1] "%1/%2 Sammlungen aktiviert"
+msgstr[0] "{n}/{total} Sammlung aktiviert"
+msgstr[1] "{n}/{total} Sammlungen aktiviert"
 
 #. Translators: This is Pango markup, be sure to escape appropriately
 #: src/config.rs:71
-#, fuzzy
-#| msgctxt "about-dialog.license-text"
-#| msgid ""
-#| "Copyright Sebastian Wiesner &lt;sebastian@swsnr.de&gt;\n"
-#| "\n"
-#| "Licensed under the terms of the EUPL 1.2. You can find official "
-#| "translations of the license text at <a href=\"%1\">%1</a>.\n"
-#| "\n"
-#| "The full English text follows.\n"
-#| "\n"
-#| "%2"
 msgctxt "about-dialog.license-text"
 msgid ""
 "Copyright {copyright_name} &lt;{copyright_mail}&gt;\n"
@@ -853,14 +775,15 @@ msgid ""
 "\n"
 "{license_text}"
 msgstr ""
-"Copyright Sebastian Wiesner &lt;sebastian@swsnr.de&gt;\n"
+"Copyright {copyright_name} &lt;{copyright_mail}&gt;\n"
 "\n"
-"Lizenziert unter den Bedingungen der EUPL 1.2. Unter <a href=\"%1\">%1</a> "
-"kannst Du eine offizielle Übersetzung der Lizenz finden.\n"
+"Lizenziert unter den Bedingungen der EUPL 1.2. Unter <a href="
+"\"{translations}\">{translations}</a> kannst Du eine offizielle Übersetzung "
+"der Lizenz finden.\n"
 "\n"
 "Es folgt der vollständige englische Text.\n"
 "\n"
-"%2"
+"{license_text}"
 
 #: src/images/source.rs:58
 msgctxt "source name"
@@ -908,28 +831,19 @@ msgid "All rights reserved."
 msgstr "Alle Rechte vorbehalten."
 
 #: src/images/sources/stalenhag.rs:98
-#, fuzzy
-#| msgctxt "source.stalenhag.description"
-#| msgid "Collection: %s"
 msgctxt "source.stalenhag.description"
 msgid "Collection: {}"
-msgstr "Sammlung: %s"
+msgstr "Sammlung: {}"
 
 #: src/images/sources/wikimedia.rs:67
-#, fuzzy
-#| msgctxt "source.wikimedia.copyright"
-#| msgid "%artist (%credit, %license)"
 msgctxt "source.wikimedia.copyright"
 msgid "{artist} ({credit}, {license})"
-msgstr "%artist (%credit, %license)"
+msgstr "{artist} ({credit}, {license})"
 
 #: src/images/sources/wikimedia.rs:75
-#, fuzzy
-#| msgctxt "source.wikimedia.copyright"
-#| msgid "%artist (%license)"
 msgctxt "source.wikimedia.copyright"
 msgid "{artist} ({license})"
-msgstr "%artist (%license)"
+msgstr "{artist} ({license})"
 
 #: src/images/sources/wikimedia.rs:85
 msgctxt "source.wikimedia.copyright"
